// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file list states > then renders file list with status icons 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:multi] multiple files                                                         ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**multip[border:│][BG:selectedBg:󰜈 [toolDiffAdded:src/new.tsx]                                  [toolD[border:│]",
  "[borderAccent:│]                                 [border:│]󰜈 [warning:src/existing.tsx]                                          [warning:󰏫 2] [border:│]",
  "[borderAccent:│]                                 [border:│]󰜈 [toolDiffRemoved:src/removed.tsx]                          [toolDiffRemoved:󰍴 10] [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: src/new.tsx (multi)                                                          ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`file list states > then renders no files message for empty change 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:empty] empty commit                                                           ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**empty [border:│][dim: No files changed]                                                             [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: all (empty)                                                                  ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`file list states > then renders selected file with different index 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**change[border:│]󰜈 [toolDiffAdded:src/a.tsx]                                     [toolDiffAdded:󰐕 5] [border:│]",
  "[borderAccent:│]                                 [border:│]󰜈 [warning:src/b.tsx]                                                 [warning:󰏫 8] [border:│]",
  "[borderAccent:│]                                 [border:│][BG:selectedBg:󰜈 [warning:src/c.tsx]                                                [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: src/c.tsx (a)                                                                ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;
